# lcu_connectorpy

./: .gitignore  README.md  pyproject.toml  scripts.py
doc/lcu_connectorpy/: connect.html  index.html
docs/: index.html
docs/lcu_connectorpy/: connect.html  index.html
lcu_connectorpy/: __init__.py  connect.py
src/: connect.py
tests/: test_conn.py  test_lcu_connectorpy.py
