[tool.poetry]
name = "lcu-connectorpy"
version = "0.1.0"
description = ""
authors = ["Noah <noah@coronasoftware.net>"]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.7"
watchdog = "^0.9.0"
psutil = "^5.6"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
flake8 = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
